This is quite disturbing but I will get it right

--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -1,10 +1,9 @@
+/*
+ * === Global style ===
+ */
+
+/* Body style */
 body {
-	margin: 0px;
-	padding: 0px;
-}
-.centered_footer {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 0;
 }
