--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,13 +1,9 @@
+/*
+ * === Global style ===
+ */
+
+/* Body style */
 body {
-	margin: 0px;
-	padding: 0px;
-	color: #484848;
-	font-size: 14px;
-	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-.centered_footer {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+  color: #484848;
+  font: 14px Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
