--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -5,7 +5,8 @@
 /* Footer style */
 footer {
   align-items: center;
-  background-color: #0f0;
+  background-color: #fff;
+  border-top: 1px solid #ccc;
   bottom: 0;
   display: flex;
   height: 60px;
