--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,24 +1,30 @@
+/*
+ * === Filters class style ===
+ */
+
+/* Filters style */
 .filters {
-	background-color: white;
-	position: relative;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  height: 70px;
+  width: 100%;
 }
-.search_button {
-	font-size: 18px;
-	background-color: #FF5A5F;
-	color: #FFFFFF;
-	height: 48px;
-	width: 20%;
-	border: none;
-	border-radius: 4px;
-	position: absolute;
-	margin-top: 11px; /* (filter_height - button_height) / 2 */
-	left: 80%;
-	transform: translateX(-30px);
+
+/* Search button style */
+.filters button {
+  background: #ff5a5f;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  float: right;
+  font-size: 18px;
+  height: 48px;
+  margin: 12px 30px;
+  width: 20%;
 }
-.search_button:hover {
-	opacity: 0.9;
+
+/* Search button hover opacity */
+.filters button:hover {
+  background-color: rgba(255, 90, 95, .9);
 }
