--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,50 +1,72 @@
+/*
+ * === Filters class style ===
+ */
+
+/* Filters style */
 .filters {
-	background-color: white;
-	position: relative;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  height: 70px;
+  width: 100%;
 }
-.locations {
-	display: inline-block;
-	height: 100%;
-	width: 25%;
+
+/* Search button style */
+.filters button {
+  background: #ff5a5f;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  float: right;
+  font-size: 18px;
+  height: 48px;
+  margin: 12px 30px;
+  width: 20%;
 }
+
+/* Search button hover opacity */
+.filters button:hover {
+  background-color: rgba(255, 90, 95, .9);
+}
+
+/* Locations and amenities style */
+.locations,
 .amenities {
-	display: inline-block;
-	height: 100%;
-	width: 25%;
+  display: inline-block;
+  height: 100%;
+  width: 25%;
 }
-.filters > .locations {
-	border-right: 1px solid #DDDDDD;
+
+/* Locations border */
+.locations {
+  border-right: 1px solid #ddd;
 }
-.locations h3, .amenities h3 {
-	font-weight: 600;
+
+/*
+ * --- Places header style ---
+ */
+
+/* Header box sizing */
+.filters h2,
+.filters h3,
+.filters h4 {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
-.locations h4, .amenities h4 {
-	font-weight: 400;
-	font-size: 14px;
+
+/* Header 3 style */
+.filters h3 {
+  font-size: 1.17em;
+  font-weight: 600;
+  height: 50%;
+  padding: 15.5px 0 0 30px;
 }
-.locations h3, .locations h4, .amenities h3, .amenities h4 {
-	margin: 0;
-	margin-top: 10px;
-	margin-left: 40px;
-}
-.search_button {
-	display: inline-block;
-	font-size: 18px;
-	background-color: #FF5A5F;
-	color: #FFFFFF;
-	height: 48px;
-	width: 20%;
-	border: none;
-	border-radius: 4px;
-	position: absolute;
-	margin-top: 11px; /* (filter_height - button_height) / 2 */
-	left: 80%;
-	transform: translateX(-30px);
-}
-.search_button:hover {
-	opacity: 0.9;
+
+/* Header 4 style */
+.filters h4 {
+  font-size: 14px;
+  font-weight: 400;
+  height: 50%;
+  padding: 4.5px 0 12px 30px;
 }
