--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,22 +1,35 @@
-.places {
-	margin: 20px;
-	margin-top: 5px;
-}
+/*
+ * === Places class style ===
+ */
+
+/* Places style */
 .places article {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 390px;
-	margin: 20px;
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
+  border: 1px solid #ff5a5f;
+  border-radius: 4px;
+  display: inline-block;
+  margin: 20px;
+  padding: 20px;
+  width: 390px;
 }
-.articles {
-	flex-wrap: wrap;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+
+/*
+ * --- Places header style ---
+ */
+
+/* Header 1 style */
+.places h1 {
+  font-size: 30px;
+  font-weight: bold;
+  margin: .67em 0 .67em 0;
+  width: 100%;
 }
-.places h1, .places h2 {
-	font-size: 30px;
+
+/* Header 2 style */
+.places h2 {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
